fixed bug where slideshow shows on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-.h2-header-wrapper > div{
+.h2-header-wrapper > div:nth-child(1){
   display: flex;
   flex-direction: column;
   gap: 60px;
